Migrate tests to JUnit Jupiter (#44)
* Migrate annotations and imports
* Migrate assertions
* Remove public visibility for test classes and methods
* Minor code cleanup