@@ -1,106 +1,110 @@
 package io.jenkins.plugins.report.jtreg.main.web;
 
-import org.junit.Assert;
+import org.junit.jupiter.api.Test;
 
-import java.io.IOException;
 import java.util.Arrays;
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 
-public class ContextExecutingHandlerTest {
-    @org.junit.Test
-    public void checkForBedCharsKeywordTest() throws IOException {
+class ContextExecutingHandlerTest {
+
+    @Test
+    void checkForBedCharsKeywordTest() throws Exception {
         for (String keyword : new String[]{"exec", "eval"}) {
-            Assert.assertTrue(ContextExecutingHandler.checkForBedChars(Arrays.asList(keyword), null));
-            Assert.assertTrue(ContextExecutingHandler.checkForBedChars(Arrays.asList("'" + keyword + "'"), null));
-            Assert.assertTrue(ContextExecutingHandler.checkForBedChars(Arrays.asList("\"" + keyword + "\""), null));
+            assertTrue(ContextExecutingHandler.checkForBedChars(List.of(keyword), null));
+            assertTrue(ContextExecutingHandler.checkForBedChars(List.of("'" + keyword + "'"), null));
+            assertTrue(ContextExecutingHandler.checkForBedChars(List.of("\"" + keyword + "\""), null));
         }
     }
 
-    @org.junit.Test
-    public void checkForBedCharsCharsTest() throws IOException {
+    @Test
+    void checkForBedCharsCharsTest() throws Exception {
         for (char ch : new char[]{'|', '&', ';', '>', '<'}) {
-            Assert.assertTrue(ContextExecutingHandler.checkForBedChars(Arrays.asList("" + ch), null));
-            Assert.assertTrue(ContextExecutingHandler.checkForBedChars(Arrays.asList("''" + ch), null));
-            Assert.assertTrue(ContextExecutingHandler.checkForBedChars(Arrays.asList("\"\"" + ch), null));
-            Assert.assertFalse(ContextExecutingHandler.checkForBedChars(Arrays.asList("\"" + ch + "\""), null));
-            Assert.assertFalse(ContextExecutingHandler.checkForBedChars(Arrays.asList("'" + ch + "'"), null));
-            Assert.assertFalse(ContextExecutingHandler.checkForBedChars(Arrays.asList("\"'" + ch + "\""), null));
-            Assert.assertFalse(ContextExecutingHandler.checkForBedChars(Arrays.asList("'\"" + ch + "'"), null));
+            assertTrue(ContextExecutingHandler.checkForBedChars(List.of("" + ch), null));
+            assertTrue(ContextExecutingHandler.checkForBedChars(List.of("''" + ch), null));
+            assertTrue(ContextExecutingHandler.checkForBedChars(List.of("\"\"" + ch), null));
+            assertFalse(ContextExecutingHandler.checkForBedChars(List.of("\"" + ch + "\""), null));
+            assertFalse(ContextExecutingHandler.checkForBedChars(List.of("'" + ch + "'"), null));
+            assertFalse(ContextExecutingHandler.checkForBedChars(List.of("\"'" + ch + "\""), null));
+            assertFalse(ContextExecutingHandler.checkForBedChars(List.of("'\"" + ch + "'"), null));
         }
     }
 
-    @org.junit.Test
-    public void checkForBedNastyEscapedCharsTest() throws IOException {
+    @Test
+    void checkForBedNastyEscapedCharsTest() throws Exception {
         for (char ch : new char[]{'|', '&', ';', '>', '<'}) {
-            Assert.assertTrue(ContextExecutingHandler.checkForBedChars(Arrays.asList("\"\\\"\"" + ch), null));
-            Assert.assertTrue(ContextExecutingHandler.checkForBedChars(Arrays.asList("\"\\\"\"" + ch + "echo ahoj"), null));
+            assertTrue(ContextExecutingHandler.checkForBedChars(List.of("\"\\\"\"" + ch), null));
+            assertTrue(ContextExecutingHandler.checkForBedChars(List.of("\"\\\"\"" + ch + "echo ahoj"), null));
         }
     }
 
-    @org.junit.Test
-    public void checkForBedEscapedCharsTest() throws IOException {
+    @Test
+    void checkForBedEscapedCharsTest() throws Exception {
         for (char ch : new char[]{'|', '&', ';', '>', '<'}) {
             //    \" escaped "
-            Assert.assertTrue(ContextExecutingHandler.checkForBedChars(Arrays.asList("\\\"" + ch), null));
+            assertTrue(ContextExecutingHandler.checkForBedChars(List.of("\\\"" + ch), null));
             //    \' escaped '
-            Assert.assertTrue(ContextExecutingHandler.checkForBedChars(Arrays.asList("\\'" + ch), null));
+            assertTrue(ContextExecutingHandler.checkForBedChars(List.of("\\'" + ch), null));
             //    \\" escaped \, thus valid "
-            Assert.assertFalse(ContextExecutingHandler.checkForBedChars(Arrays.asList("\\\\\"" + ch), null));
+            assertFalse(ContextExecutingHandler.checkForBedChars(List.of("\\\\\"" + ch), null));
             //    \\' \, thus valid '
-            Assert.assertFalse(ContextExecutingHandler.checkForBedChars(Arrays.asList("\\\\'" + ch), null));
+            assertFalse(ContextExecutingHandler.checkForBedChars(List.of("\\\\'" + ch), null));
 
             //    \\\" escaped \ + escaped "
-            Assert.assertTrue(ContextExecutingHandler.checkForBedChars(Arrays.asList("\\\\\\\"" + ch), null));
+            assertTrue(ContextExecutingHandler.checkForBedChars(List.of("\\\\\\\"" + ch), null));
             //    \\\' escaped \ + escaped  '
-            Assert.assertTrue(ContextExecutingHandler.checkForBedChars(Arrays.asList("\\\\\\'" + ch), null));
+            assertTrue(ContextExecutingHandler.checkForBedChars(List.of("\\\\\\'" + ch), null));
             //    \\\\" 2x escaped \, thus valid "
-            Assert.assertFalse(ContextExecutingHandler.checkForBedChars(Arrays.asList("\\\\\\\\\"" + ch), null));
+            assertFalse(ContextExecutingHandler.checkForBedChars(List.of("\\\\\\\\\"" + ch), null));
             //    \\\\' 2x escaped \, thus valid '
-            Assert.assertFalse(ContextExecutingHandler.checkForBedChars(Arrays.asList("\\\\\\\\'" + ch), null));
+            assertFalse(ContextExecutingHandler.checkForBedChars(List.of("\\\\\\\\'" + ch), null));
         }
     }
 
-    @org.junit.Test
-    public void checkForGoodCharsCharsTest() throws IOException {
+    @Test
+    void checkForGoodCharsCharsTest() throws Exception {
         for (char ch : new char[]{'*', '?', '.', 'a', 'b'}) {
-            Assert.assertFalse(ContextExecutingHandler.checkForBedChars(Arrays.asList("" + ch), null));
-            Assert.assertFalse(ContextExecutingHandler.checkForBedChars(Arrays.asList("''" + ch), null));
-            Assert.assertFalse(ContextExecutingHandler.checkForBedChars(Arrays.asList("\"\"" + ch), null));
-            Assert.assertFalse(ContextExecutingHandler.checkForBedChars(Arrays.asList("\"" + ch + "\""), null));
-            Assert.assertFalse(ContextExecutingHandler.checkForBedChars(Arrays.asList("'" + ch + "'"), null));
-            Assert.assertFalse(ContextExecutingHandler.checkForBedChars(Arrays.asList("\"'" + ch + "\""), null));
-            Assert.assertFalse(ContextExecutingHandler.checkForBedChars(Arrays.asList("'\"" + ch + "'"), null));
+            assertFalse(ContextExecutingHandler.checkForBedChars(List.of("" + ch), null));
+            assertFalse(ContextExecutingHandler.checkForBedChars(List.of("''" + ch), null));
+            assertFalse(ContextExecutingHandler.checkForBedChars(List.of("\"\"" + ch), null));
+            assertFalse(ContextExecutingHandler.checkForBedChars(List.of("\"" + ch + "\""), null));
+            assertFalse(ContextExecutingHandler.checkForBedChars(List.of("'" + ch + "'"), null));
+            assertFalse(ContextExecutingHandler.checkForBedChars(List.of("\"'" + ch + "\""), null));
+            assertFalse(ContextExecutingHandler.checkForBedChars(List.of("'\"" + ch + "'"), null));
         }
     }
 
-    @org.junit.Test
-    public void checkForBadCharsRealLifeTest() throws IOException {
-        Assert.assertTrue(ContextExecutingHandler.checkForBedChars(
+    @Test
+    void checkForBadCharsRealLifeTest() throws Exception {
+        assertTrue(ContextExecutingHandler.checkForBedChars(
                 Arrays.asList("--compare", "--only-volatile", "true", "--formatting", "html", "--history", "1", "--force", "--regex",
                         "\\\".*;echo ahoj;\\\""), null));
-        Assert.assertTrue(ContextExecutingHandler.checkForBedChars(
+        assertTrue(ContextExecutingHandler.checkForBedChars(
                 Arrays.asList("--compare", "--only-volatile", "true", "--formatting", "html", "--history", "1", "--regex", "\"\\\"\"",
                         "--virtual", "--force;echo ahoj"), null));
-        Assert.assertTrue(ContextExecutingHandler.checkForBedChars(
+        assertTrue(ContextExecutingHandler.checkForBedChars(
                 Arrays.asList("--compare", "--only-volatile", "true", "--formatting", "html", "--history", "1", "--regex", "\"\\\"\"",
                         "--virtual", "--force;echo", "ahoj"), null));
-        Assert.assertFalse(ContextExecutingHandler.checkForBedChars(
+        assertFalse(ContextExecutingHandler.checkForBedChars(
                 Arrays.asList("--compare", "--only-volatile", "true", "--formatting", "html", "--history", "1", "--force", "--regex",
                         "\".*;echo ahoj;\""), null));
     }
 
-    @org.junit.Test
-    public void checkForBadCharsRealLifeNastyPinnedTest() throws IOException {
-        Assert.assertTrue(ContextExecutingHandler.checkForBedChars(Arrays.asList("\"\\\"\";echo"), null));
+    @Test
+    void checkForBadCharsRealLifeNastyPinnedTest() throws Exception {
+        assertTrue(ContextExecutingHandler.checkForBedChars(List.of("\"\\\"\";echo"), null));
     }
 
-    @org.junit.Test
-    public void checkForBadCharsRealLifeNastyTest() throws IOException {
-        Assert.assertTrue(ContextExecutingHandler.checkForBedChars(Arrays.asList("\"\\\"\";echo"), null));
-        Assert.assertTrue(ContextExecutingHandler.checkForBedChars(
+    @Test
+    void checkForBadCharsRealLifeNastyTest() throws Exception {
+        assertTrue(ContextExecutingHandler.checkForBedChars(List.of("\"\\\"\";echo"), null));
+        assertTrue(ContextExecutingHandler.checkForBedChars(
                 Arrays.asList("--compare", "--only-volatile", "true", "--formatting", "html", "--history", "1", "--regex",
                         "\"\\\"\";echo", "ahoj"), null));
-        Assert.assertTrue(ContextExecutingHandler.checkForBedChars(
+        assertTrue(ContextExecutingHandler.checkForBedChars(
                 Arrays.asList("--compare", "--only-volatile", "true", "--formatting", "html", "--history", "1", "--regex",
                         "\"\\\"\";echo ahoj"), null));
     }
